# Compiler-Test

./: .gitignore  CMakeLists.txt  README.md  build.sh  builder.sh  cleanup.sh  flake.nix  prepFrontend.sh  run.sh  test.sh
src/: Lexer.rkt  Main.rkt  Parser.rkt  Reader.rkt  main.c  main.cpp
src/Backend/Data/: Data.cpp  Data.hpp  JitData.hpp
src/Backend/Interpreter/: Interpreter.hpp
src/Backend/Jit/: Jit.cpp  Jit.hpp
src/Backend/SymbolTable/: SymbolTable.c  SymbolTable.cpp  SymbolTable.h  SymbolTable.hpp
src/Backend/Type/: Type.cpp  Type.hpp
src/Cons/: Cons.h
src/Frontend/Lexer/: Lexer.l  Scanner.cpp  Scanner.hpp
src/Frontend/Parser/: Parser.cpp  Parser.hpp  Parser.yy
src/GC/: GC.c  GC.h
src/Lexer/: Lexer.h  Lexer.l  Scanner.cpp  lex.yy.c  lex.yy.cc
src/Parser/: Parser.cpp  Parser.hpp  Parser.output  Parser.tab.c  Parser.tab.cc  Parser.tab.h  Parser.tab.h.gch  Parser.tab.hh  Parser.y  Parser.yy
src/SymbolTable/: SymbolTable.c  SymbolTable.h
src/gc/: gc.c  gc.h  out  test.c
tests/: LexerTest.rkt  ParserTest.rkt
